# lib/api-spec/openapi.yaml
@@ -818,6 +818,9 @@ components:
           type: ["number", "null"]
         rooms:
           type: ["number", "null"]
+        unitType:
+          type: string
+          enum: [residential, garage, parking]
         status:
           type: string
           enum: [vacant, occupied, renovation]
@@ -844,6 +847,10 @@ components:
           type: number
         rooms:
           type: number
+        unitType:
+          type: string
+          enum: [residential, garage, parking]
+          default: residential
         status:
           type: string
           enum: [vacant, occupied, renovation]
@@ -866,6 +873,9 @@ components:
           type: number
         rooms:
           type: number
+        unitType:
+          type: string
+          enum: [residential, garage, parking]
         status:
           type: string
           enum: [vacant, occupied, renovation]
